examples/invalid/14_builtin_without_expected_type.lane
// invalid: builtin requires a direct expected type
module Examples.Invalid14

pub fn bad() -> Int {
  let x = builtin("%anything")
  x
}
